--- a/home_page.html
+++ b/home_page.html
@@ -46,36 +46,36 @@
 
         </div>
     </nav>
-    <div class="bigbox container">
+    <div class="bigbox ">
         <div class="row">
-            <div class="col-sm-4 col-md-3 mb-3">
+            <div class="col-sm-4 col-md-2 mb-3">
                 <div class="book_rank_box">
                     <p>book rank</p>
                 </div>
             </div>
-            <div class="col-sm-4 col-md-6 mb-3">
+            <div class="col-sm-4 col-md-8 mb-3">
                 <div class="main_content_box">
                     <div>part1</div>
                     <div>part2</div>
                     <div>part3</div>
                 </div>
             </div>
-            <div class="col-sm-4 col-md-3 mb-3">
+            <div class="col-sm-4 col-md-2 mb-3">
                 <div class="hot_request_box">the most popular review</div>
             </div>
-
         </div>
+    </div>
 
 
-        <footer>
-            <div class="container" style="background-color:rgb(0, 0, 0); color:rgb(0, 0, 0);">
-                <div style="float:right;">Author: Xiao Zhang (23363869) Yunfang Lyu (23685059)
-                    Jinshu Zhang (23773086)
-                    Alex Wang (24123115)
-                    Philip Wu (23902134)
-                </div>
+    <footer>
+        <div class="container" style="background-color:rgb(0, 0, 0); color:rgb(0, 0, 0);">
+            <div style="float:right;">Author: Xiao Zhang (23363869) Yunfang Lyu (23685059)
+                Jinshu Zhang (23773086)
+                Alex Wang (24123115)
+                Philip Wu (23902134)
             </div>
-        </footer>
+        </div>
+    </footer>
 </body>
 
 </html>
