--- a/login.html
+++ b/login.html
@@ -14,14 +14,13 @@
         <!-- Stylesheets -->
         <link rel="stylesheet" href="login.css">
         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/remixicon/4.2.0/remixicon.css">
-        
     </head>
     <body>
         <div class="flip-container">
             <div class="flipper" id="flipper">
                 <div class="login" id="login">
                     <form action="#" class="form-container">
-                        <h1 class="form-title">Sign in</h1>
+                        <h1 class="form-title">Log in</h1>
                         <div class="form-content">
                             <div class="form-box">
                                 <i class="ri-user-3-line input-icon"></i>
@@ -37,7 +36,6 @@
                                 <div class="input-box">
                                     <input type="password" required class="input-area" id="login-password" placeholder=" ">
                                     <label for="login-password" class="input-label">Password</label>
-                                    <i class="eye-icon" id="login-eye"></i>
                                 </div>
                             </div>
                         </div>
@@ -64,7 +62,12 @@
                             <div class="form-box">
                                 <i class="ri-user-3-line input-icon"></i>
                                 <div class="input-box">
-                                    <input type="text" required class="input-area" id="register-user-name" placeholder=" ">
+                                    <input 
+                                            type="text" 
+                                            required 
+                                            class="input-area" id="register-user-name" 
+                                            placeholder=" "
+                                            maxlength="5">
                                     <label for="register-user-name" class="input-label">User name</label>
                                 </div>
                             </div>
@@ -75,7 +78,6 @@
                                 <div class="input-box">
                                     <input type="password" required class="input-area" id="register-password" placeholder=" ">
                                     <label for="register-password" class="input-label">Password</label>
-                                    <i class="eye-icon" id="register-eye"></i>
                                 </div>
                             </div>
                         </div>
@@ -126,7 +128,6 @@
                                 <div class="input-box">
                                     <input type="password" required class="input-area" id="reset-password" placeholder=" ">
                                     <label for="reset-password" class="input-label">Password</label>
-                                    <i class="eye-icon" id="reset-eye"></i>
                                 </div>
                             </div>
                         </div>
