Add the remember script part

--- a/login.html
+++ b/login.html
@@ -165,5 +165,6 @@
         </div>
         <script src="flip.js"></script>
         <script src="register-limit.js"></script>
+        <script src="remember.js"></script>
     </body>
 </html>
