--- a/home_page.html
+++ b/home_page.html
@@ -9,6 +9,7 @@
     <link href="https://www.w3school.com.cn/lib/bs/bootstrap.css" rel="stylesheet">
     <script src="https://www.w3school.com.cn/lib/bs/bootstrap.js"></script>
     <link rel="stylesheet" href="home_page.css">
+    <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
 </head>
 
 <body>
@@ -26,12 +27,12 @@
                     <span class="navbar-toggler-icon"></span>
                 </button>
             </div>
-            <div class=" dropdown justify-content-end" data-bs-hover="dropdown">
-                <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown"
-                    aria-expanded="false">
-                    <img src="" alt="user profile photo">
+            <div class=" dropdown justify-content-end" data-bs-hover="dropdown" style="text-align: right; width: 10%;">
+                <a class="nav-link dropdown-toggle " href="#" role="button" data-bs-toggle="dropdown"
+                    aria-expanded="false" style="padding: 0;">
+                    <img src="user.png" alt="user profile photo" style="width: 30%;">
                 </a>
-                <ul class="dropdown-menu dropdown-menu-end" aria-labelledby="dropdownMenuButton">
+                <ul class="dropdown-menu dropdown-menu-end" aria-labelledby="dropdownMenuButton" style="right: 2%;">
                     <li><a class=" dropdown-item" href="#">My account</a></li>
                     <li><a class="dropdown-item" href="#">Review management</a></li>
                     <li><a class="dropdown-item" href="#">My lists</a></li>
@@ -51,25 +52,25 @@
             <div class="col-sm-4 col-md-2 mb-3">
                 <div class="book_rank_box">
                     <h1>BOOK RANK</h1>
-                    <img src="./book_rank01.gif" alt="">
+                    <img class="book_rank_image" src="./book_rank01.gif" alt="">
                     <a class="book_rank_link" href="#">Romeo and Juliet</a><br>
-                    <img src="./book_rank02.gif" alt="">
+                    <img class="book_rank_image" src="./book_rank02.gif" alt="">
                     <a class="book_rank_link" href="#">Pride and Prejudice</a><br>
-                    <img src="./book_rank03.gif" alt="">
+                    <img class="book_rank_image" src="./book_rank03.gif" alt="">
                     <a class="book_rank_link" href="#">Animal Farm</a><br>
-                    <img src="./book_rank04.gif" alt="">
+                    <img class="book_rank_image" src="./book_rank04.gif" alt="">
                     <a class="book_rank_link" href="#">Twilight</a><br>
-                    <img src="./book_rank05.gif" alt="">
+                    <img class="book_rank_image" src="./book_rank05.gif" alt="">
                     <a class="book_rank_link" href="#">Harry Potter</a><br>
-                    <img src="./book_rank06.gif" alt="">
+                    <img class="book_rank_image" src="./book_rank06.gif" alt="">
                     <a class="book_rank_link" href="#">The Good Earth</a><br>
-                    <img src="./book_rank07.gif" alt="">
+                    <img class="book_rank_image" src="./book_rank07.gif" alt="">
                     <a class="book_rank_link" href="#">The Diary of a Young Girl</a><br>
-                    <img src="./book_rank08.gif" alt="">
+                    <img class="book_rank_image" src="./book_rank08.gif" alt="">
                     <a class="book_rank_link" href="#">Joy Luck Club</a><br>
-                    <img src="./book_rank09.gif" alt="">
+                    <img class="book_rank_image" src="./book_rank09.gif" alt="">
                     <a class="book_rank_link" href="#">Daddy-Long-Legs</a><br>
-                    <img src="./book_rank10.gif" alt="">
+                    <img class="book_rank_image" src="./book_rank10.gif" alt="">
                     <a class="book_rank_link" href="#">Sorrows of Young Werther</a><br>
 
                 </div>
@@ -297,23 +298,22 @@
                 <div class="hot_request_box">
                     <span>BOOK REVIEW</span>
                     <div class="like_click">
-                        <div>How amazing this book is!</div>
-                        <div>
-                            <div><button id="likeButton" class="like-button" onclick="like()">
+                        <div>How !</div>
+                        <div class="like_and_number_box">
+                            <div class="heart_button"><button id="likeButton" class="like-button" onclick="like()">
                                     <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="red"
                                         class="bi bi-suit-heart" viewBox="0 0 16 16">
                                         <path
                                             d="m8 6.236-.894-1.789c-.222-.443-.607-1.08-1.152-1.595C5.418 2.345 4.776 2 4 2 2.324 2 1 3.326 1 4.92c0 1.211.554 2.066 1.868 3.37.337.334.721.695 1.146 1.093C5.122 10.423 6.5 11.717 8 13.447c1.5-1.73 2.878-3.024 3.986-4.064.425-.398.81-.76 1.146-1.093C14.446 6.986 15 6.131 15 4.92 15 3.326 13.676 2 12 2c-.777 0-1.418.345-1.954.852-.545.515-.93 1.152-1.152 1.595zm.392 8.292a.513.513 0 0 1-.784 0c-1.601-1.902-3.05-3.262-4.243-4.381C1.3 8.208 0 6.989 0 4.92 0 2.755 1.79 1 4 1c1.6 0 2.719 1.05 3.404 2.008.26.365.458.716.596.992a7.6 7.6 0 0 1 .596-.992C9.281 2.049 10.4 1 12 1c2.21 0 4 1.755 4 3.92 0 2.069-1.3 3.288-3.365 5.227-1.193 1.12-2.642 2.48-4.243 4.38z" />
                                     </svg>
-
                                 </button></div>
-                            <div>100</div>
+                            <div class="number_of_likes">100</div>
                         </div>
                     </div>
                     <div class="like_click">
                         <div>How amazing this book is!</div>
-                        <div>
-                            <div><button id="likeButton" class="like-button" onclick="like()">
+                        <div class="like_and_number_box">
+                            <div class="heart_button"><button id="likeButton" class="like-button" onclick="like()">
                                     <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="red"
                                         class="bi bi-suit-heart" viewBox="0 0 16 16">
                                         <path
@@ -321,13 +321,14 @@
                                     </svg>
 
                                 </button></div>
-                            <div>100</div>
+                            <div class="number_of_likes">100</div>
                         </div>
                     </div>
                     <div class="like_click">
                         <div>How amazing this book is!</div>
-                        <div>
-                            <div><button id="likeButton" class="like-button" onclick="like()">
+                        <div class="like_and_number_box">
+                            <div class="heart_button"><button id="likeButton" class="like-button" onclick="like()"
+                                    style="align-items: center;">
                                     <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="red"
                                         class="bi bi-suit-heart" viewBox="0 0 16 16">
                                         <path
@@ -335,13 +336,13 @@
                                     </svg>
 
                                 </button></div>
-                            <div>100</div>
+                            <div class="number_of_likes">100</div>
                         </div>
                     </div>
                     <div class="like_click">
                         <div>How amazing this book is!</div>
-                        <div>
-                            <div><button id="likeButton" class="like-button" onclick="like()">
+                        <div class="like_and_number_box">
+                            <div class="heart_button"><button id="likeButton" class="like-button" onclick="like()">
                                     <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="red"
                                         class="bi bi-suit-heart" viewBox="0 0 16 16">
                                         <path
@@ -349,13 +350,13 @@
                                     </svg>
 
                                 </button></div>
-                            <div>100</div>
+                            <div class="number_of_likes">100</div>
                         </div>
                     </div>
                     <div class="like_click">
                         <div>How amazing this book is!</div>
-                        <div>
-                            <div><button id="likeButton" class="like-button" onclick="like()">
+                        <div class="like_and_number_box">
+                            <div class="heart_button"><button id="likeButton" class="like-button" onclick="like()">
                                     <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="red"
                                         class="bi bi-suit-heart" viewBox="0 0 16 16">
                                         <path
@@ -363,13 +364,13 @@
                                     </svg>
 
                                 </button></div>
-                            <div>100</div>
+                            <div class="number_of_likes">100</div>
                         </div>
                     </div>
                     <div class="like_click">
                         <div>How amazing this book is!</div>
-                        <div>
-                            <div><button id="likeButton" class="like-button" onclick="like()">
+                        <div class="like_and_number_box">
+                            <div class="heart_button"><button id="likeButton" class="like-button" onclick="like()">
                                     <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="red"
                                         class="bi bi-suit-heart" viewBox="0 0 16 16">
                                         <path
@@ -377,13 +378,13 @@
                                     </svg>
 
                                 </button></div>
-                            <div>100</div>
+                            <div class="number_of_likes">100</div>
                         </div>
                     </div>
                     <div class="like_click">
                         <div>How amazing this book is!</div>
-                        <div>
-                            <div><button id="likeButton" class="like-button" onclick="like()">
+                        <div class="like_and_number_box">
+                            <div class="heart_button"><button id="likeButton" class="like-button" onclick="like()">
                                     <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="red"
                                         class="bi bi-suit-heart" viewBox="0 0 16 16">
                                         <path
@@ -391,13 +392,13 @@
                                     </svg>
 
                                 </button></div>
-                            <div>100</div>
+                            <div class="number_of_likes">100</div>
                         </div>
                     </div>
                     <div class="like_click">
                         <div>How amazing this book is!</div>
-                        <div>
-                            <div><button id="likeButton" class="like-button" onclick="like()">
+                        <div class="like_and_number_box">
+                            <div class="heart_button"><button id="likeButton" class="like-button" onclick="like()">
                                     <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="red"
                                         class="bi bi-suit-heart" viewBox="0 0 16 16">
                                         <path
@@ -405,13 +406,13 @@
                                     </svg>
 
                                 </button></div>
-                            <div>100</div>
+                            <div class="number_of_likes">100</div>
                         </div>
                     </div>
                     <div class="like_click">
                         <div>How amazing this book is!</div>
-                        <div>
-                            <div><button id="likeButton" class="like-button" onclick="like()">
+                        <div class="like_and_number_box">
+                            <div class="heart_button"><button id="likeButton" class="like-button" onclick="like()">
                                     <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="red"
                                         class="bi bi-suit-heart" viewBox="0 0 16 16">
                                         <path
@@ -419,13 +420,13 @@
                                     </svg>
 
                                 </button></div>
-                            <div>100</div>
+                            <div class="number_of_likes">100</div>
                         </div>
                     </div>
                     <div class="like_click">
                         <div>How amazing this book is!</div>
-                        <div>
-                            <div><button id="likeButton" class="like-button" onclick="like()">
+                        <div class="like_and_number_box">
+                            <div class="heart_button"><button id="likeButton" class="like-button" onclick="like()">
                                     <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="red"
                                         class="bi bi-suit-heart" viewBox="0 0 16 16">
                                         <path
@@ -433,7 +434,7 @@
                                     </svg>
 
                                 </button></div>
-                            <div>100</div>
+                            <div class="number_of_likes">100</div>
                         </div>
                     </div>
                 </div>
@@ -451,6 +452,22 @@
             </div>
         </div>
     </footer>
+    <script>
+        $(document).ready(function () {
+            $('.like-button').click(function () {
+                var heart = $(this).find('.bi-suit-heart');
+                if (heart.hasClass('filled')) {
+                    heart.removeClass('filled');
+                    heart.html('<svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="red" fill="currentColor" class="bi bi-suit-heart" viewBox="0 0 16 16" ><path d="m8 6.236-.894-1.789c-.222-.443-.607-1.08-1.152-1.595C5.418 2.345 4.776 2 4 2 2.324 2 1 3.326 1 4.92c0 1.211.554 2.066 1.868 3.37.337.334.721.695 1.146 1.093C5.122 10.423 6.5 11.717 8 13.447c1.5-1.73 2.878-3.024 3.986-4.064.425-.398.81-.76 1.146-1.093C14.446 6.986 15 6.131 15 4.92 15 3.326 13.676 2 12 2c-.777 0-1.418.345-1.954.852-.545.515-.93 1.152-1.152 1.595zm.392 8.292a.513.513 0 0 1-.784 0c-1.601-1.902-3.05-3.262-4.243-4.381C1.3 8.208 0 6.989 0 4.92 0 2.755 1.79 1 4 1c1.6 0 2.719 1.05 3.404 2.008.26.365.458.716.596.992a7.6 7.6 0 0 1 .596-.992C9.281 2.049 10.4 1 12 1c2.21 0 4 1.755 4 3.92 0 2.069-1.3 3.288-3.365 5.227-1.193 1.12-2.642 2.48-4.243 4.38z"/></svg>');
+                } else {
+                    heart.addClass('filled');
+                    heart.html('<svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-suit-heart-fill" viewBox="0 0 16 16" style="color: red;"><path d="M4 1c2.21 0 4 1.755 4 3.92C8 2.755 9.79 1 12 1s4 1.755 4 3.92c0 3.263-3.234 4.414-7.608 9.608a.513.513 0 0 1-.784 0C3.234 9.334 0 8.183 0 4.92 0 2.755 1.79 1 4 1"/></svg>');
+                }
+            });
+        });
+    </script>
+
+
 </body>
 
 </html>
