--- a/404-page/404.html
+++ b/404-page/404.html
@@ -16,16 +16,19 @@
         <link rel="stylesheet" href="404.css">
     </head>
     <body>
-        <nav class="shelf">
-            <a class="book home-page">Home page</a>
-            <a class="book about-us">About us</a>
-            <a class="book contact">Contact</a>
-            <a class="book faq">F.A.Q.</a>
-            <span class="book not-found"></span>
-            <span class="door left"></span>
-            <span class="door right"></span>
-          </nav>
-          <h1>Error 404</h1>
-          <p>The page you're loking for can't be found</p>
+        <div class="tips">
+            <h1>Error 404</h1>
+            <br>
+            <p>The page you're looking for can't be found</p>
+        </div>
+        <div class="container">
+            <div class="shelf">
+                <a class="book home-page">Home Page</a>
+                <a class="book profile">Profile</a>
+                <span class="book not-found"></span>
+                <span class="door left"></span>
+                <span class="door right"></span>
+            </div>
+        </div>
     </body>
 </html>
