Through css validator; add the lang="en"

--- a/404-page/404.html
+++ b/404-page/404.html
@@ -1,10 +1,10 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
     <head>
         <!-- Basic Page Needs -->
         <meta charset="UTF-8">
         <meta name="description" content="This is a page that shows content not found.">
-        <meta name="author" content="Vleriia">
+        <meta name="author" content="Yunfang Lyu(23685059)">
         <!-- Reference by https://codepen.io/valerite-dev/pen/KMZyLz -->
         <meta name="keywords" content="404">
         <title>BookReviews</title>
