--- a/login-page-front/login.html
+++ b/login-page-front/login.html
@@ -14,12 +14,14 @@
         <!-- Stylesheets -->
         <link rel="stylesheet" href="login.css">
         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/remixicon/4.2.0/remixicon.css">
+        
     </head>
     <body>
+        <img src="/images/background.jpg" alt="login background image">
         <div class="flip-container">
             <div class="flipper" id="flipper">
                 <div class="login" id="login">
-                    <form action="#" class="form-container">
+                    <form class="form-container" id="login-form" action="#" method="POST">
                         <h1 class="form-title">Log in</h1>
                         <div class="form-content">
                             <div class="form-box">
@@ -66,7 +68,7 @@
                      </form>
                 </div>
                 <div class="register" id="register">
-                    <form action="#" class="form-container">
+                    <form class="form-container" id="register-form" action="#" method="POST">
                         <h1 class="form-title">Register</h1>
                         <div class="form-content">
                             <div class="form-box">
@@ -122,14 +124,14 @@
                     </form>
                 </div>
                 <div class="reset" id="reset">
-                    <form action="#" class="form-container">
+                    <form class="form-container" id="validation-form" action="#" method="POST">
                         <h1 class="form-title">Reset Password</h1>
                         <div class="form-content">
                            <div class="form-box">
                               <i class="ri-user-3-line input-icon"></i>
                               <div class="input-box">
-                                    <input type="text" required class="input-area" id="user-name" placeholder=" ">
-                                    <label for="user-name" class="input-label">User name</label>
+                                    <input type="text" required class="input-area" id="validate-name" placeholder=" ">
+                                    <label for="validate-name" class="input-label">User name</label>
                                 </div>
                             </div>
                         </div>
@@ -144,7 +146,7 @@
                         </div>
                         <button type="submit" id="validate-button">Validate</button>
                         <br>
-                        <div class="form-content"> 
+                        <div class="form-content" id="reset-part"> 
                             <div class="form-box">
                                 <i class="ri-lock-2-line input-icon"></i>
                                 <div class="input-box">
@@ -163,6 +165,8 @@
                 </div>
             </div>
         </div>
+        <!-- JavaScripts -->
+        <script src="loading.js" defer></script>
         <script src="flip.js"></script>
         <script src="register-limit.js"></script>
         <script src="remember.js"></script>
